--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.0.0+1
+  bloc_flutter: ^0.1.0
+  bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
