--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.0.0+1
-  bloc_flutter: ^0.1.0
-  bloc: ^8.1.1
   equatable: ^2.0.5
+  flutter_bloc: ^8.1.2
+  match: ^0.4.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  match_generator: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
