--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -44,6 +43,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
   match: ^0.4.1
+  auto_size_text: ^3.0.0
+  flutter_lints: ^2.0.0
+  match_generator: ^0.4.1
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
   build_runner: ^2.3.3
-  match_generator: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
