add screen login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_lints: ^2.0.0
   match_generator: ^0.4.1
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
