--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_lints: ^2.0.0
   match_generator: ^0.4.1
   shared_preferences: ^2.0.18
+  validatorless: ^1.2.3
 
 dev_dependencies:
   flutter_test:
